[package]
name = "gpdcli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6"
futures = "0.3.25"
indicatif = "0.17.2"
jsonwebtoken = "8.1.1"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
time = "0.3.17"
tokio = { version = "1.22", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
